# meridian

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  deny.toml  package.json  pnpm-workspace.yaml  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: architect.md  code-reviewer.md  connectivity-debugger.md  devops.md  planner.md  rust-dev.md  security-reviewer.md  task-picker.md  test-engineer.md  web-dev.md
.claude/commands/: adr.md  deploy-check.md  doc-sync.md  new-task.md  next-task.md  pick-next-phase.md  plan-phase.md  plan-review-phase.md  review.md  spike.md  start-review-phase.md  test.md
.claude/skills/anonymity-model/: SKILL.md
.claude/skills/api-contracts/: SKILL.md
.claude/skills/crypto-protocols/: SKILL.md
.claude/skills/deployment/: SKILL.md
.claude/skills/stream-type-authoring/: SKILL.md
.claude/skills/task-tracking/: SKILL.md
.claude/skills/webrtc-nat-traversal/: SKILL.md
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: ci.yml
apps/: CLAUDE.md
apps/cli/: CLAUDE.md  Cargo.toml
apps/cli/src/: account.rs  chat.rs  doctor.rs  main.rs  opacity.rs  policy.rs  session.rs  session_connect.rs
apps/cli/tests/: chat_demo.rs  demo.rs  nat_relay.rs  rendezvous_demo.rs  session_connect.rs  session_connect_webrtc.rs  session_demo.rs  session_demo_webrtc.rs
apps/core/: Cargo.toml
apps/core/src/: chat.rs  lib.rs  relay.rs  session.rs  signal_relay.rs  streams.rs
apps/core/tests/: chat_manager.rs  p2p_session.rs  p2p_session_webrtc.rs  relay_policy.rs
apps/crypto/: CLAUDE.md  Cargo.toml
apps/crypto/src/: at_rest.rs  error.rs  fingerprint.rs  lib.rs  primitives.rs  ratchet.rs  session.rs  x3dh.rs
apps/crypto/tests/: at_rest.rs  conformance.rs  session_roundtrip.rs
apps/envelope/: Cargo.toml
apps/envelope/src/: chat.rs  ctrl.rs  envelope.rs  lib.rs  signal.rs
apps/envelope/tests/: roundtrip.rs
apps/identity/: CLAUDE.md  Cargo.toml
apps/identity/src/: error.rs  id.rs  keys.rs  lib.rs  qr.rs
apps/identity/tests/: conformance.rs  properties.rs
apps/proto/: CLAUDE.md  Cargo.toml
apps/proto/src/: bundle.rs  bytes.rs  chat.rs  ctrl.rs  envelope.rs  frame.rs  lib.rs  msg.rs  signal.rs
apps/proto/tests/: roundtrip.rs
apps/rendezvous/: CLAUDE.md  Cargo.toml  Dockerfile  demo.toml  rendezvous.example.toml
apps/rendezvous/examples/: fetch_turn_credentials.rs
apps/rendezvous/src/: auth.rs  config.rs  lib.rs  main.rs  metrics.rs  ratelimit.rs  state.rs  store.rs  turn.rs  ws.rs
apps/rendezvous/src/store/: sqlite.rs
apps/rendezvous/tests/: config_fail_closed.rs  rendezvous.rs
apps/signaling/: Cargo.toml
apps/signaling/src/: bundle.rs  client.rs  error.rs  lib.rs
apps/store/: Cargo.toml
apps/store/src/: error.rs  file.rs  lib.rs  mem.rs  os.rs
apps/store/tests/: keystore.rs
apps/transport/: Cargo.toml
apps/transport/src/: lib.rs  loopback.rs  types.rs  webrtc_backend.rs
apps/transport/tests/: webrtc_backend.rs
apps/web/: CLAUDE.md  index.html  package.json
apps/web/src/: main.ts
docs/: INDEX.md  glossary.md  handoff-readiness.md
docs/adr/: 0001-identity-scheme.md  0002-federation-mechanism.md  0003-e2ee-protocol.md  0004-group-messaging.md  0005-multi-device.md  0006-terminal-transport.md  0007-offline-mailbox.md  0008-infra-topology.md  0009-monorepo-tooling.md  0010-desktop-shell-tauri.md  0011-ratchet-library.md  0012-browser-ui-framework.md  0013-server-web-framework.md  0014-media-stack.md  0015-ratchet-composition.md  README.md
docs/api/: README.md  core-api-contracts.md  identity-format.md  messaging-envelope-v1.md  rendezvous-protocol-v1.md  stream-types-v1.md  wire-protocol.md
docs/architecture/: README.md  data-model.md  implementation-plan.md  roadmap.md  stack.md  system-design.md
docs/architecture/diagrams/: README.md  build-target-topology.mermaid  core-modules.mermaid  key-hierarchy.mermaid  seq-call-relay-fallback.mermaid  seq-cross-org-setup.mermaid  seq-device-provisioning.mermaid  seq-file-transfer.mermaid  seq-offline-mailbox.mermaid  session-state-machine.mermaid  stream-plugin.mermaid  system-component.mermaid  trust-state-machine.mermaid
docs/architecture/features/: 01-identity-keystore-core.md  02-rendezvous-mvp.md  03-e2ee-messaging-relayed.md  04-p2p-session-substrate.md  05-nat-traversal-relay-policy.md  06-cross-org-federation.md  07-offline-mailbox.md  08-verification-trust.md  09-file-transfer.md  10-av-calls-screenshare.md  11-browser-desktop-clients.md  12-mobile-clients.md  13-multi-device.md  14-selfhosting-ops-kit.md  15-location-stickers.md  16-tier2-tunnels.md
docs/architecture/implementation-plan/: README.md  review-phase-template.md
docs/operations/: README.md  deployment.md  monitoring.md  runbook.md
docs/operations/diagrams/: deployment-topology.mermaid
docs/security/: README.md  anonymity-and-retention.md  threat-mitigation-matrix.md  threat-model.md  verification-ux.md
docs/tasks/: README.md  TEMPLATE-phase-readme.md  TEMPLATE-review-report.md  TEMPLATE-task.md
docs/tasks/phase-0/: 0.1-identity-keystore.md  0.2-rendezvous-mvp.md  0.3-e2ee-messaging.md  0.4-p2p-session-substrate.md  (+2 more)
docs/testing/: README.md  strategy.md
harnesses/: CLAUDE.md  README.md
harnesses/ghost-device/: README.md  run.sh
harnesses/mitm-sim/: README.md  run.sh
harnesses/nat-matrix/: README.md  run.sh
harnesses/opacity-audit/: README.md  run.sh
infra/: CLAUDE.md
infra/coturn/: turnserver.conf
infra/deploy/: bootstrap-ca.sh  docker-compose.yml  two-orgs.compose.yml
test-vectors/: CLAUDE.md  README.md  envelope-v1.json  identity-v1.json  ratchet-v1.json  safety-numbers-v1.json  x3dh-v1.json
tools/: CLAUDE.md  check-docs.sh  lint-metrics-allowlist.sh  lint-no-serde-on-blob.sh  lint-server-no-core.sh  metrics-allowlist.txt  netns-nat-matrix.sh  netns-two-lans.sh  testrig
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs  vectors.rs
tools/xtask/src/vectors/: envelope.rs  identity.rs  mod.rs  ratchet.rs  safety_numbers.rs  x3dh.rs
(+90 files in other folders)
