[package]
name = "meridian-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Reference terminal client and T01 demo driver. Drives identity through meridian-core.
[[bin]]
name = "meridian"
path = "src/main.rs"

[features]
default = []
# Forwards to meridian-core/webrtc so `--transport webrtc` can construct a real WebRtcTransport
# (1.15's real ICE/SCTP/DTLS backend) instead of the deterministic LoopbackTransport. Off by default
# for the same reason as the underlying crates: heavy dependency tree, needs real UDP/ICE.
webrtc = ["meridian-core/webrtc"]

[dependencies]
meridian-core = { path = "../core" }
# `keyring` (the all-in-one v1 wrapper) installs a real platform credential store for `--store os`.
keyring = "4.1.4"
clap = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
age = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Drive the real server in-process for the register/fetch-bundle demo (T02). test-tamper-hook is
# needed so the --tamper demo path (fetch-bundle --tamper) still exercises the substituted-bundle
# rejection; it's a dev-only feature, never enabled in the release meridian-rendezvous binary.
meridian-rendezvous = { path = "../rendezvous", features = ["test-tamper-hook"] }
tokio = { workspace = true, features = ["rt", "macros", "net", "sync", "time", "io-util"] }
