[package]
name = "meridian-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Facade over identity, crypto, trust, session, transport, streams, signaling, store.
# Public API is canonical in docs/api/core-api-contracts.md. Sub-crates land per the roadmap;
# T01 wires in identity + store.
[dependencies]
meridian-proto = { path = "../proto" }
meridian-envelope = { path = "../envelope" }
meridian-identity = { path = "../identity" }
meridian-store = { path = "../store" }
meridian-crypto = { path = "../crypto" }
meridian-transport = { path = "../transport" }
meridian-signaling = { path = "../signaling" }
serde = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
getrandom = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[features]
default = []
# Forwards to meridian-transport/webrtc so `meridian_core::transport::WebRtcTransport` is available
# (real ICE/SCTP/DTLS backend, 1.15). Off by default for the same reason as the underlying crate:
# heavy dependency tree, needs real UDP/ICE.
webrtc = ["meridian-transport/webrtc"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
