[package]
name = "meridian-identity"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# T01: self-certifying `mrd1:…@domain` identity. ID encode/parse/validate, detached Ed25519
# sign/verify, QR encode/decode. Wire-frozen format: docs/api/identity-format.md.
# Dependency direction (docs/architecture/stack.md §3): proto ── identity ── store.
[dependencies]
meridian-store = { path = "../store" }
ed25519-dalek = { workspace = true }
data-encoding = { workspace = true }
crc32c = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
rqrr = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
