[package]
name = "meridian-proto"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# Shared wire types (envelopes, bundles, ctrl frames). Compiled by BOTH clients and the
# rendezvous server so they cannot drift. Canonical spec: docs/api/wire-protocol.md and
# docs/api/rendezvous-protocol-v1.md. Deterministic CBOR (RFC 8949) via ciborium.
[dependencies]
serde = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
