[package]
name = "meridian-store"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# T01: the SecretStore trait (docs/api/core-api-contracts.md) + two production impls —
# OS keystore (keyring-core) and passphrase-wrapped file (age/scrypt) for headless — plus an
# in-memory impl used by tests and the "keys never hit disk in plaintext" harness.
# Dependency direction (docs/architecture/stack.md §3): a leaf that meridian-identity depends on.
[dependencies]
age = { workspace = true }
keyring-core = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
# X3DH (T03) needs Diffie–Hellman with the account key. We convert the Ed25519 seed to its
# birationally-equivalent X25519 secret (libsodium `crypto_sign_ed25519_sk_to_curve25519`) so the
# DH runs *through the store* and the private key never leaves it (crypto-protocols skill rule 6).
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
