[package]
name = "meridian-transport"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

# T04: the `Transport` trait (the single reason one core runs everywhere — D02) and its first,
# deterministic implementation, `LoopbackTransport`. Data channels / ICE / SCTP / DTLS live behind
# this trait; webrtc-rs is the production backend (ADR 0014 / ADR 0006), gated behind the `webrtc`
# feature so default builds and CI stay pure-Rust and network-free.
# Public API contract: docs/api/core-api-contracts.md ("Traits the platform MUST implement").
[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
thiserror = { workspace = true }
# webrtc-rs itself + the `Bytes` type its data-channel API speaks. Both optional, pulled in only by
# the `webrtc` feature below.
webrtc = { version = "0.17", optional = true }
bytes = { version = "1", optional = true }

[features]
default = []
# The production data-plane backend (webrtc-rs): real ICE/SCTP/DTLS data channels behind
# `WebRtcTransport`. Off by default: it is a heavy dependency tree and needs real UDP/ICE, so it is
# exercised explicitly (`--features webrtc`) by the netns rig and desktop/CLI builds, not unit CI.
# See docs/adr/0014-media-stack.md and the `/spike libwebrtc-packaging` note.
webrtc = ["dep:webrtc", "dep:bytes"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
